--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,5 +1,22 @@
 <header class="page-header">
     <div class="container">
-        <p style="color: red;">Header</p>
+
+        <div class="header-wrap">
+            <div>
+                <img src="./src/imgs/logo.png" alt="Логотип" width="100" height="100">
+            </div>
+
+            <p class="header-slogan">Виклик евакутора
+                <span class="header-slogan-city">City</span>
+            </p>
+
+            <nav class="main-nav">
+                <a href="">Викликати</a>
+                <a href="">Послуги</a>
+                <a href="">Питання-відповіді</a>
+            </nav>
+
+            <a class="header-phone" href="tel:+380000000000">000-000-00-00</a>
+        </div>
     </div>
 </header>
