--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,5 +1,36 @@
 <section class="section hero">
     <div class="container">
-        <h2 class="title">HERO SECTION</h2>
+        <h1 class="visually-hidden">Виклик евакуатора</h1>
+
+        <div class="hero-wrap">
+            <div class="hero-thumb">
+                <img class="hero-img" src="./src/imgs/hero.jpg" alt="">
+            </div>
+
+            <form class="hero-form">
+                <h2>Виклик евакуатора</h2>
+
+                <label for="name">Ваше ім’я:</label>
+                <input type="text" id="name" name="name" required />
+
+                <label for="phone">Номер телефону:</label>
+                <input type="tel" id="phone" name="phone" required pattern="[0-9+()\- ]{10,20}" />
+
+                <label for="location">Місцезнаходження:</label>
+                <input type="text" id="location" name="location" required />
+
+                <label for="destination">Куди транспортувати авто:</label>
+                <input type="text" id="destination" name="destination" />
+
+                <label for="car">Марка та модель авто:</label>
+                <input type="text" id="car" name="car" required />
+
+                <label for="comment">Додаткова інформація:</label>
+                <textarea id="comment" name="comment" rows="4"></textarea>
+
+                <button type="submit">Викликати евакуатор</button>
+            </form>
+        </div>
+
     </div>
 </section>
