--- a/src/sass/base/_common.scss
+++ b/src/sass/base/_common.scss
@@ -5,7 +5,7 @@ html {
 body {
     background-color: #fff;
     color: #000;
-    // font-family: "Roboto", sans-serif;
+    font-family: "Ubuntu", sans-serif;
     line-height: 1.5;
     letter-spacing: 0.32px;
 }
