add two section markup

--- a/src/partials/features.html
+++ b/src/partials/features.html
@@ -1,5 +1,39 @@
 <section class="section features">
     <div class="container">
-        <h2 class="title">Features</h2>
+        <h2 class="title">Наші переваги</h2>
+        <ul class="features-list">
+            <li>
+                <div class="features-item-wrapper">
+                <svg width="24" height="24" class="features-item-icon">
+                    <use href="/src/imgs/sprite.svg#icon-regular"/>
+                </svg>
+                <p>Цілодобова доступність</p>
+                </div>
+            </li>
+            <li>
+                <div class="features-item-wrapper">
+                <svg width="24" height="24" class="features-item-icon">
+                    <use href="/src/imgs/sprite.svg#icon-time">
+            </svg>
+            <p>Оперативна подача</p>
+            </div>
+        </li>
+            <li>
+                <div class="features-item-wrapper">
+                <svg width="24" height="24" class="features-item-icon">
+                    <use href="/src/imgs/sprite.svg#icon-wallet">
+            </svg>
+            <p>Доступна ціна</p>
+            </div>
+        </li>
+            <li>
+                <div class="features-item-wrapper">
+                <svg width="24" height="24" class="features-item-icon">
+                    <use href="/src/imgs/sprite.svg#icon-services">
+            </svg>
+            <p>Безпека транспортування</p>
+            </div>
+        </li>
+        </ul>
     </div>
 </section>
