--- a/src/partials/faq.html
+++ b/src/partials/faq.html
@@ -1,5 +1,38 @@
 <section class="section faq">
     <div class="container">
         <h2 class="title">FAQ SECTION</h2>
+
+        <ul class="faq-list">
+            <li class="faq-list-item">
+                <span class="item-number">1</span>
+                <p><span class="item-text">Що потрібно з документів?</span><br>
+                    Вам потрібен тільки тех паспорт на авто або документи на авто в Дії</p>
+            </li>
+        
+            <li class="faq-list-item">
+                <span class="item-number">2</span>
+                <p><span class="item-text">Чи євакуюєте машину з заблокованою АКПП?</span><br>
+                    Так, ми маємо таку можливість</p>
+            </li>
+        
+            <li class="faq-list-item">
+                <span class="item-number">3</span>
+                <p><span class="item-text">Як швидко подаєте євакуатор ?</span><br>
+                    В залежності від вашою локації та ситуації на дорогах. Час подачі до 40хв
+                </p>
+            </li>
+        
+            <li class="faq-list-item">
+                <span class="item-number">4</span>
+                <p><span class="item-text">Яка вартість?</span><br>
+                    В залежності від супутніх факторів та вашого місця знаходження, точну вартість ми вам повідомимо по телефону після уточнення деталей. Мінімальна вартість - 600грн</p>
+            </li>
+
+            <li class="faq-list-item">
+                <span class="item-number">5</span>
+                <p><span class="item-text">Яка максимальна вага авто яку можете євакуювати?</span><br>
+                    Ми маємо змогу євакуювати авто вагою до 3тон</p>
+            </li>
+        </ul>
     </div>
 </section>
