--- a/src/sass/layout/_faq.scss
+++ b/src/sass/layout/_faq.scss
@@ -1,3 +1,40 @@
 .faq {
-    background-color: #6dffdf;
+    background-color: #fff;
 }
+
+
+
+.faq-list {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.faq-list-item {
+    display: flex;
+    gap: 20px;
+    border: 1px solid #a0c3ff;
+    border-radius: 8px;
+    padding: 20px;
+    margin-bottom: 24px;
+}
+
+.item-number {
+    font-size: 32px;
+    font-weight: bold;
+    color: #2a6ecb;
+    min-width: 32px;
+}
+
+.item-text {
+    color: #f77c00;
+    font-weight: bold;
+    text-transform: uppercase;
+}
+
+.faq-list-item p {
+    margin: 0;
+    font-size: 16px;
+    line-height: 1.5;
+}
+
