--- a/src/sass/layout/_features.scss
+++ b/src/sass/layout/_features.scss
@@ -1,3 +1,31 @@
 .features {
-    background-color: #8cff6c;
+    // background-color: #8cff6c;
+    background: linear-gradient(to bottom,
+                #f9bb34 0%,
+                #ffffff 18%,
+                #ffffff 82%,
+                #f9bb34 100%);
+}
+
+.features-list {
+    display: flex;
+    justify-content: space-between;
+}
+
+.features-item-icon {
+    width: 100px;
+    height: auto;
+}
+
+.features-item-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 16px;
+    width: 205px;
+    padding: 15px;
+    border: 2px solid transparent;
+    border-radius: 16px;
+    box-shadow: 4px 4px 13px -3px rgba(34, 53, 90, 0.82);
 }
