--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,5 +1,46 @@
 <footer class="page-footer">
     <div class="container">
-        <p style="color: red;">Footer</p>
+
+        <div class="header-wrap">
+            <a href="/">
+                <img src="./src/imgs/logo.png" alt="Логотип" width="100" height="100">
+            </a>
+
+            <div class="contacts-box">
+                <a class="footer-phone" href="tel:+380975551511">097-555-15-11</a>
+                <p>24/7 по всій території України</p>
+            </div>
+
+            <div class="social-box">
+                <p>Ми в соцмережах</p>
+
+                <ul class="social-list">
+                    <li>
+                        <a href="">
+                            <svg width="32" height="32">
+                                <use href="/src/imgs/sprite.svg#icon-instagram">
+                            </svg>
+                        </a>
+                    </li>
+
+                    <li>
+                        <a href="">
+                            <svg width="32" height="32">
+                                <use href="/src/imgs/sprite.svg#icon-telegram">
+                            </svg>
+                        </a>
+                    </li>
+
+                    <li>
+                        <a href="">
+                            <svg width="32" height="32">
+                                <use href="/src/imgs/sprite.svg#icon-tiktok">
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+
+        </div>
     </div>
-</footer>
+    </header>
