--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -2,21 +2,60 @@
     <div class="container">
 
         <div class="header-wrap">
-            <div>
+            <a href="/">
                 <img src="./src/imgs/logo.png" alt="Логотип" width="100" height="100">
-            </div>
+            </a>
 
-            <p class="header-slogan">Виклик евакутора
-                <span class="header-slogan-city">City</span>
-            </p>
+            <nav>
+                <ul class="nav-list">
+                    <li>
+                        <a href="#towTruckCall">Викликати</a>
+                    </li>
 
-            <nav class="main-nav">
-                <a href="">Викликати</a>
-                <a href="">Послуги</a>
-                <a href="">Питання-відповіді</a>
+                    <li>
+                        <a href="#features">Переваги</a>
+                    </li>
+
+                    <li>
+                        <a href="#faq">Питання-відповіді</a>
+                    </li>
+                </ul>
             </nav>
 
-            <a class="header-phone" href="tel:+380000000000">000-000-00-00</a>
+            <div class="social-box">
+                <p>Ми в соцмережах</p>
+
+                <ul class="social-list">
+                    <li>
+                        <a href="">
+                            <svg width="32" height="32">
+                                <use href="/src/imgs/sprite.svg#icon-instagram">
+                            </svg>
+                        </a>
+                    </li>
+
+                    <li>
+                        <a href="">
+                            <svg width="32" height="32">
+                                <use href="/src/imgs/sprite.svg#icon-telegram">
+                            </svg>
+                        </a>
+                    </li>
+
+                    <li>
+                        <a href="">
+                            <svg width="32" height="32">
+                                <use href="/src/imgs/sprite.svg#icon-tiktok">
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+
+            <div class="contacts-box">
+                <a class="header-phone" href="tel:+380975551511">097-555-15-11</a>
+                <p>24/7 по всій території України</p>
+            </div>
         </div>
     </div>
 </header>
