--- a/src/sass/layout/_faq.scss
+++ b/src/sass/layout/_faq.scss
@@ -1,5 +1,9 @@
 .faq {
-    background-color: #fff;
+    background: linear-gradient(to bottom,
+
+            #ffffff 90%,
+            #f9bb34 100%);
+
 }
 
 
@@ -37,4 +41,3 @@
     font-size: 16px;
     line-height: 1.5;
 }
-
