--- a/src/sass/layout/_features.scss
+++ b/src/sass/layout/_features.scss
@@ -1,10 +1,12 @@
 .features {
     // background-color: #8cff6c;
     background: linear-gradient(to bottom,
-                #f9bb34 0%,
-                #ffffff 18%,
-                #ffffff 82%,
-                #f9bb34 100%);
+            #f9bb34 0%,
+            #ffffff 18%,
+            #ffffff 82%,
+            #ffffff 100%,
+            // #f9bb34 100%
+        );
 }
 
 .features-list {
