--- a/src/sass/utilities/_variables.scss
+++ b/src/sass/utilities/_variables.scss
@@ -1,5 +1,11 @@
 :root {
     --primary-text-color: #000;
-    --accent-color: rgb(255, 160, 5);
+    --light-text-color: #fff;
+
+    --secondary-bg-color: #f9bb34;
     --primary-bg-color: #fff;
+    --accent: #ff6600;
+    --accent-dark: #e65c00;
+
+    --animation: 0.3s ease-in-out;
 }
