--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,35 +1,34 @@
-<section class="section hero">
+<section class="section hero" id="towTruckCall">
     <div class="container">
         <h1 class="visually-hidden">Виклик евакуатора</h1>
 
         <div class="hero-wrap">
             <div class="hero-thumb">
-                <img class="hero-img" src="./src/imgs/hero.jpg" alt="">
+
+                <img class="hero-img" src="./src/imgs/hero.jpg"
+                    alt="Евакуатор білого кольору перевозить сірий легковий автомобіль, припаркований біля сучасної будівлі з синьо-сріблястим фасадом.">
             </div>
 
-            <form class="hero-form">
-                <h2>Виклик евакуатора</h2>
+            <div class="form-box">
+                <div class="text-box">
+                    <h2>Швидка евакуація авто</h2>
 
-                <label for="name">Ваше ім’я:</label>
-                <input type="text" id="name" name="name" required />
+                    <p>Потрібна допомога на дорозі? Замовляйте евакуатор за хвилину</p>
+                </div>
 
-                <label for="phone">Номер телефону:</label>
-                <input type="tel" id="phone" name="phone" required pattern="[0-9+()\- ]{10,20}" />
+                <form class="hero-form">
 
-                <label for="location">Місцезнаходження:</label>
-                <input type="text" id="location" name="location" required />
+                    <label>Ваше ім’я:
+                        <input type="text" id="name" name="name" required />
+                    </label>
 
-                <label for="destination">Куди транспортувати авто:</label>
-                <input type="text" id="destination" name="destination" />
+                    <label>Номер телефону:
+                        <input type="tel" name="phone" required pattern="[0-9+()\- ]{10,20}" />
+                    </label>
 
-                <label for="car">Марка та модель авто:</label>
-                <input type="text" id="car" name="car" required />
-
-                <label for="comment">Додаткова інформація:</label>
-                <textarea id="comment" name="comment" rows="4"></textarea>
-
-                <button type="submit">Викликати евакуатор</button>
-            </form>
+                    <button type="submit">Викликати евакуатор</button>
+                </form>
+            </div>
         </div>
 
     </div>
