--- a/src/sass/components/_title.scss
+++ b/src/sass/components/_title.scss
@@ -1,7 +1,7 @@
 .title {
     margin-bottom: 72px;
 
-    color: red;
+    color: var(--accent);
     text-align: center;
     font-size: 36px;
     font-weight: 700;
