--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -1,5 +1,10 @@
 .hero {
-    background-color: #f9bb34;
+    // background-color: var(--secondary-bg-color);
+    background: linear-gradient(to bottom,
+            #ffffff 1%,
+            rgba(249, 187, 52, 0.7) 10%,
+            #f9bb34 30%,
+            #f9bb34 100%);
 }
 
 .hero-wrap {
@@ -8,10 +13,12 @@
 }
 
 .hero-thumb {
-    width: 500px;
-    height: 750px;
+    flex-shrink: 0;
 
-    border-radius: 12px;
+    width: 600px;
+    height: 500px;
+
+    border-radius: 16px;
     overflow: hidden;
 }
 
@@ -21,32 +28,48 @@
     object-fit: cover;
 }
 
-.hero-form {
-    background-color: #fff;
+.form-box {
+    flex-grow: 1;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
     padding: 30px;
-    border-radius: 12px;
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-    max-width: 500px;
-    width: 100%;
 }
 
-.hero-form h2 {
-    margin-top: 0;
-    margin-bottom: 20px;
-    font-size: 24px;
-    color: #333;
+.text-box {
+    text-align: center;
 }
+
+.text-box h2 {
+    margin-bottom: 20px;
+
+    font-size: 32px;
+}
+
+.text-box p {
+    margin-bottom: 20px;
+
+    font-size: 18px;
+}
+
+.hero-form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
 
 .hero-form label {
-    display: block;
+    display: flex;
+    flex-direction: column;
     margin-bottom: 6px;
-    font-weight: bold;
-    color: #444;
+    font-weight: 700;
+
 }
 
-.hero-form input,
-.hero-form textarea {
-    width: 100%;
+.hero-form input {
     padding: 10px;
     margin-bottom: 16px;
     border: 1px solid #ccc;
@@ -55,16 +78,16 @@
 }
 
 .hero-form button {
-    background-color: #ff6600;
+    background-color: var(--accent);
     color: #fff;
     padding: 12px 20px;
     border: none;
     border-radius: 6px;
     font-size: 16px;
     cursor: pointer;
-    transition: background-color 0.3s ease;
+    transition: background-color var(--animation)
 }
 
 .hero-form button:hover {
-    background-color: #e65c00;
+    background-color: var(--accent-dark);
 }
