--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -27,7 +27,8 @@
 
                 <ul class="social-list">
                     <li>
-                        <a href="">
+                        <a href="https://www.instagram.com/dyadya__maks/?igsh=amhjZjhsc2FqdjRy&utm_source=qr#"
+                            target="_blank" rel="noopener nofollow">
                             <svg width="32" height="32">
                                 <use href="/src/imgs/sprite.svg#icon-instagram">
                             </svg>
@@ -35,7 +36,7 @@
                     </li>
 
                     <li>
-                        <a href="">
+                        <a href="https://t.me/eva_kuatordp" target="_blank" rel="noopener nofollow">
                             <svg width="32" height="32">
                                 <use href="/src/imgs/sprite.svg#icon-telegram">
                             </svg>
@@ -43,7 +44,8 @@
                     </li>
 
                     <li>
-                        <a href="">
+                        <a href="https://www.tiktok.com/@dyadya_maks_?_t=ZM-8votLUy4MXG&_r=1" target="_blank"
+                            rel="noopener nofollow">
                             <svg width="32" height="32">
                                 <use href="/src/imgs/sprite.svg#icon-tiktok">
                             </svg>
