--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -16,7 +16,7 @@
                     <p>Потрібна допомога на дорозі? Замовляйте евакуатор за хвилину</p>
                 </div>
 
-                <form class="hero-form">
+                <form class="hero-form" id="form-tg">
 
                     <label>Ваше ім’я:
                         <input type="text" id="name" name="name" required />
