--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -2,11 +2,11 @@
     <div class="container">
 
         <div class="header-wrap">
-            <a href="/">
+            <a href="/" class="logo">
                 <img src="./src/imgs/logo.png" alt="Логотип" width="100" height="100">
             </a>
 
-            <nav>
+            <nav class="main-nav">
                 <ul class="nav-list">
                     <li>
                         <a href="#towTruckCall">Викликати</a>
@@ -23,7 +23,7 @@
             </nav>
 
             <div class="social-box">
-                <p>Ми в соцмережах</p>
+                <p class="social-text">Ми в соцмережах</p>
 
                 <ul class="social-list">
                     <li>
