--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -2,7 +2,7 @@
     <div class="container">
 
         <div class="header-wrap">
-            <a href="/">
+            <a href="/" class="logo">
                 <img src="./src/imgs/logo.png" alt="Логотип" width="100" height="100">
             </a>
 
