--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -1,5 +1,4 @@
 .hero {
-    // background-color: var(--secondary-bg-color);
     background: linear-gradient(to bottom,
             #ffffff 1%,
             rgba(249, 187, 52, 0.7) 10%,
@@ -8,18 +7,22 @@
 }
 
 .hero-wrap {
-    display: flex;
-    gap: 40px;
+    @media screen and (min-width: 1158px) {
+        display: flex;
+        gap: 40px;
+    }
 }
 
 .hero-thumb {
-    flex-shrink: 0;
-
-    width: 600px;
-    height: 500px;
-
     border-radius: 16px;
     overflow: hidden;
+
+    @media screen and (min-width: 1158px) {
+        flex-shrink: 0;
+
+        width: 600px;
+        height: 500px;
+    }
 }
 
 .hero-img {
@@ -29,13 +32,15 @@
 }
 
 .hero-form-box {
-    flex-grow: 1;
 
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+    @media screen and (min-width: 768px) {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        flex-grow: 1;
 
-    padding: 30px;
+        padding: 30px;
+    }
 }
 
 .hero-text-box {
