--- a/src/sass/layout/_page-footer.scss
+++ b/src/sass/layout/_page-footer.scss
@@ -16,4 +16,12 @@
     &focus {
         color: var(--accent-dark);
     }
+
+    @media screen and (max-width:298px) {
+        font-size: 28px;
+    }
+
+    @media screen and (max-width:220px) {
+        font-size: 20px;
+    }
 }
