--- a/src/sass/layout/_page-header.scss
+++ b/src/sass/layout/_page-header.scss
@@ -1,25 +1,56 @@
 .page-header {
     background-color: var(--primary-bg-color);
-
-    @media screen and (max-width: 767px) {
-        background-color: aquamarine;
-    }
 }
 
 .header-wrap {
     display: flex;
+    flex-direction: column;
     align-items: center;
-    justify-content: space-between;
-    gap: 40px;
-    padding: 20px 0;
+
+    @media screen and (min-width: 768px) {
+        flex-direction: row;
+        justify-content: space-between;
+        gap: 40px;
+        padding: 20px 0;
+    }
+}
+
+.logo {
+    margin: 0;
+    flex-shrink: 0;
+
+    @media screen and (max-width:767px) {
+        margin-top: 8px;
+        margin-bottom: 12px;
+    }
+}
+
+.main-nav {
+    display: none;
+
+    @media screen and (min-width:1158px) {
+        display: block;
+    }
 }
 
 .social-box {
     width: 140px;
+    margin-bottom: 0;
+
+    @media screen and (max-width:767px) {
+        order: 3;
+        margin-bottom: 20px;
+    }
 }
 
 .social-box p {
     margin-bottom: 12px;
+}
+
+.social-text {
+    @media screen and (max-width:767px) {
+        display: none;
+    }
 }
 
 .social-list {
@@ -45,6 +76,13 @@
 
 .contacts-box {
     text-align: center;
+    margin: 0;
+
+
+    @media screen and (max-width:767px) {
+        order: 2;
+        margin-bottom: 20px;
+    }
 }
 
 .header-phone {
@@ -52,6 +90,14 @@
     color: var(--accent);
 
     transition: color var(--animation);
+
+    @media screen and (max-width:298px) {
+        font-size: 28px;
+    }
+
+    @media screen and (max-width:220px) {
+        font-size: 20px;
+    }
 
     &:hover,
     &focus {
