add handle 404 and wds logo

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -42,7 +42,17 @@
                     </li>
                 </ul>
             </div>
+        </div>
 
+        <div class="footer-bottom">
+            <p>
+                <a class="wds-link" href="https://www.webdevsynergy.com.ua/uk" target="_blank"
+                    rel="noopener noreferrer">
+                    <span class="wds-text">Розроблено веб-студією</span>
+                    <span class="wds-logo">WDS</span>
+                    <span class="wds-text">WebDevSynergy</span>
+                </a>
+            </p>
         </div>
     </div>
-    </header>
+</footer>
